examples/test_manifests/dmarzi-whereami/whereami-v2.yaml
# Copied from great dmarzi: https://paste.googleplex.com/4692784813441024#
kind: Namespace
apiVersion: v1
metadata:
  name: store
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v2
  namespace: store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: v2
  template:
    metadata:
      labels:
        app: store
        version: v2
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.2.1
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-v2
  namespace: store
  annotations:
    networking.gke.io/max-rate-per-endpoint: "10"
spec:
  selector:
    app: store
    version: v2
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store
  namespace: store
  annotations:
    networking.gke.io/max-rate-per-endpoint: "10"
spec:
  selector:
    app: store
    version: v2
  ports:
  - port: 8080
    targetPort: 8080
