examples/test_manifests/dmarzi-whereami/whereami-gateway-but-later.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
#apiVersion: networking.x-k8s.io/v1alpha2
metadata:
  name: external-http
  namespace: store
spec:
  gatewayClassName: gke-l7-gxlb-mc
  listeners:
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      selector:
        matchLabels:
          gateway: external-http
---
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: public-store-route
  namespace: store
  labels:
    gateway: external-http
spec:
  hostnames:
  - "store.example.com"
  rules:
  - forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: store
      port: 8080
  - matches:
    - path:
        type: Prefix
        value: /v1
    forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: store-v1 # app-web-01
      port: 8080
  - matches:
    - path:
        type: Prefix
        value: /v2
    forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: store-v2 # app-web-02
      port: 8080
